syntax = "proto3";

package proto.users;

option go_package = "github.com/robertgarayshin/driveshare/proto/users";

service Users {
  rpc Create(User) returns (UserResponse) {}
  rpc Get(User) returns (UserResponse) {}
  rpc GetAll(Request) returns (UserResponse) {}
  rpc Auth(User) returns (Token) {}
  rpc ValidateToken(Token) returns (Token) {}
  rpc EditProfile(User) returns(UserResponse) {}
  rpc DeleteProfile(User) returns (UserResponse) {}
}

message Request {}

message User {
  int32 id = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
  string password = 5;
}

message UserResponse {
  User user = 1;
  repeated User users = 2;
  repeated Error errors = 3;
}

message Token {
  string token = 1;
  bool valid = 2;
  repeated Error errors = 3;
}

message Error {
  int32 code = 1;
  string description = 2;
}